# rp2040-pac

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  device.x  sortFieldsAlphaNum.sh  update.sh
.github/workflows/: build_and_test.yml  clippy.yml  rustfmt.yml  update.yml
src/: adc.rs  busctrl.rs  clocks.rs  dma.rs  generic.rs  i2c0.rs  io_bank0.rs  io_qspi.rs  lib.rs  pads_bank0.rs  pads_qspi.rs  pio0.rs  pll_sys.rs  ppb.rs  psm.rs  pwm.rs  resets.rs  rosc.rs  rtc.rs  sio.rs  spi0.rs  syscfg.rs  sysinfo.rs  tbman.rs  timer.rs  uart0.rs  usbctrl_dpram.rs  usbctrl_regs.rs  vreg_and_chip_reset.rs  watchdog.rs  xip_ctrl.rs  xip_ssi.rs  xosc.rs
src/adc/: cs.rs  div.rs  fcs.rs  fifo.rs  inte.rs  intf.rs  intr.rs  ints.rs  result.rs
src/busctrl/: bus_priority.rs  bus_priority_ack.rs  perfctr0.rs  perfctr1.rs  perfctr2.rs  perfctr3.rs  perfsel0.rs  perfsel1.rs  perfsel2.rs  perfsel3.rs
src/clocks/: clk_adc_ctrl.rs  clk_adc_div.rs  clk_adc_selected.rs  clk_gpout0_ctrl.rs  clk_gpout0_div.rs  clk_gpout0_selected.rs  clk_gpout1_ctrl.rs  clk_gpout1_div.rs  clk_gpout1_selected.rs  clk_gpout2_ctrl.rs  clk_gpout2_div.rs  clk_gpout2_selected.rs  clk_gpout3_ctrl.rs  clk_gpout3_div.rs  clk_gpout3_selected.rs  clk_peri_ctrl.rs  clk_peri_div.rs  clk_peri_selected.rs  clk_ref_ctrl.rs  clk_ref_div.rs  clk_ref_selected.rs  clk_rtc_ctrl.rs  clk_rtc_div.rs  clk_rtc_selected.rs  clk_sys_ctrl.rs  clk_sys_div.rs  clk_sys_resus_ctrl.rs  clk_sys_resus_status.rs  clk_sys_selected.rs  clk_usb_ctrl.rs  clk_usb_div.rs  clk_usb_selected.rs  enabled0.rs  enabled1.rs  fc0_delay.rs  fc0_interval.rs  fc0_max_khz.rs  fc0_min_khz.rs  (+12 more)
svd/: rp2040.svd.patched  rp2040.yaml
(+1008 files in other folders)
