[package]
name = "rp2040-pac"
version = "0.1.6"
authors = ["eolder <evanmolder@gmail.com>", "Jonathan Pallant <github@thejpster.org.uk>"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp2040-pac"
description = "A Peripheral Access Crate for the Raspberry Pi RP2040 SoC"
license = "BSD-3-Clause"

[dependencies]
cortex-m = "0.7.3"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[features]
rt = ["cortex-m-rt/device"]
