[package]
name = "rp2040-pac"
version = "0.5.0"
authors = ["The RP-RS team"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp2040-pac"
description = "A Peripheral Access Crate for the Raspberry Pi RP2040 SoC"
license = "BSD-3-Clause"
repository = "https://github.com/rp-rs/rp2040-pac"

[package.metadata.docs.rs]
features = ["rt"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
cortex-m = "0.7.3"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[dependencies.critical-section]
optional = true
version = "1.0.0"

[features]
rt = ["cortex-m-rt/device"]
